--- a/AgentDemo/AgentDemo.csproj
+++ b/AgentDemo/AgentDemo.csproj
@@ -76,6 +76,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\AddEditPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\AgentPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -139,6 +143,9 @@
     </Compile>
     <Compile Include="Models\sysdiagrams.cs">
       <DependentUpon>AgentDemo.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\AddEditPage.xaml.cs">
+      <DependentUpon>AddEditPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\AgentPage.xaml.cs">
       <DependentUpon>AgentPage.xaml</DependentUpon>
